# syntara-clean

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  bootstrap.sh  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: agents.md  api.md  architecture.md  cli.md  compliance.md  crm.md  dev-glossary.md  observability.md  overview.md  refactor-roadmap.md  structure.md  tenancy.md  tenant-rule-design.md  usage.md
scripts/: flip_refactor.py
src/syntara/: __init__.py  api.py  cli.py  compliance.py  runtime.py
src/syntara/agents/: __init__.py  base_agent.py  deal_risk_agent.py  lead_qualification_agent.py  outreach_agent.py
src/syntara/compliance_rules/: __init__.py  ethics_rule.py  privacy_rule.py  risk_rule.py
src/syntara/core/: compliance_engine.py  decision_engine.py  explainability.py
src/syntara/crm/: adapter.py  dummy_provider.py  models.py
src/syntara/tenancy/: __init__.py  integration.py  policy.py  rules.py
tests/: test_agents_deal_risk.py  test_agents_lead_qualification.py  test_agents_outreach.py  test_api.py  test_cli_demo.py  test_compliance_behavior.py  test_compliance_rules.py  test_crm_adapter.py  test_explainability_trace.py  test_tenant_policy_risk_threshold.py  test_tenant_policy_rule_enablement.py
